# pocketwatcher

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  release-assets.yml
pocketwatcher/: __init__.py  cli.py  detectors.py  enrichment.py  linux.py  reporting.py  utils.py  windows.py
scripts/: push_github.sh
tests/: test_linux_parse.py  test_window.py
